# github-management

./: .gitignore  CITATION.cff  CONTRIBUTING.md  README-CN.md  README.md  SECURITY.md  SKILL.md  pyproject.toml
agents/: openai.yaml
config/: auth.example.json
references/: authentication.md  ci-diagnostics.md  development-practices.md  review-comments.md  safety-policy.md  security-best-practices-golang-general-backend-security.md  security-best-practices-javascript-express-web-server-security.md  security-best-practices-javascript-general-web-frontend-security.md  security-best-practices-javascript-jquery-web-frontend-security.md  security-best-practices-javascript-typescript-nextjs-web-server-security.md  security-best-practices-javascript-typescript-react-web-frontend-security.md  security-best-practices-javascript-typescript-vue-web-frontend-security.md  security-best-practices-python-django-web-server-security.md  security-best-practices-python-fastapi-web-server-security.md  security-best-practices-python-flask-web-server-security.md  security-controls-and-assets.md  security-ownership-neo4j-import.md  security-threat-model-template.md  source-attribution.md  workflows.md
scripts/: fetch_comments.py  gh_common.py  inspect_ci.py  inspect_pr.py  inspect_pr_checks.py  repo_audit.py  triage_issues.py
scripts/security_ownership/: build_ownership_map.py  community_maintainers.py  query_ownership.py  run_ownership_map.py
