[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "github-management-skill"
version = "0.1.0"
description = "Codex Agent skill for safe GitHub management workflows across PRs, issues, CI, releases, repository hygiene, and security audits."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
  { name = "Jiyuan Liu", email = "erie@seu.edu.cn" },
  { name = "He Li" },
]
keywords = ["codex-skill", "agent-skill", "github", "github-management", "gh-cli", "repository-management", "pull-requests", "issue-triage", "github-actions", "security-audit"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Version Control :: Git",
  "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/Eriemon/github-management"
Repository = "https://github.com/Eriemon/github-management"

[tool.setuptools]
py-modules = []
